POR/RefEdge/src/objects/Custom_Settings__c.object
<CustomObject>
    <fields>
        <fullName>Import_Objects__c</fullName>
        <inlineHelpText>Select the ReferenceEdge objects for which imports are enabled</inlineHelpText>
        <label>Import Objects</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Reference_Content__c</fullName>
                </value>
                <value>
                    <fullName>Reference_Basic_Information__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Include_Opp_Attributes_in_RefSearch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Opp Attributes in RefSearch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Weekends__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If selected, days specified in “Off Days of Week” will not be included in date calculations (e.g., request lead times).</inlineHelpText>
        <label>Exclude Weekends</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Infl_Event_Fetch_DateTime__c</fullName>
        <description>This field store information that when we fetch last events from Infl_Batch_Events.</description>
        <inlineHelpText>This field store information that when we fetch last events from Infl_Batch_Events. 
Don&apos;t Modify this field.</inlineHelpText>
        <label>Infl Event Fetch DateTime</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Infl_Reference_Cursor__c</fullName>
        <description>This field is use  when we fetch reference records from influitive.</description>
        <inlineHelpText>This field is use  when we fetch reference records from influitive.</inlineHelpText>
        <label>Infl Reference Cursor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Influitive_API_URL__c</fullName>
        <label>Influitive API URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Influitive_Auth_Token__c</fullName>
        <label>Influitive Auth Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inherit_Attributes_from_All_Accounts__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Contacts will inherit ALL attributes from ALL associated Accounts.</inlineHelpText>
        <label>Inherit Attributes from All Accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inherit_Attributes_from_Primary_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Contacts will ONLY inherit attributes from the Primary Account. By default, the primary account will have the oldest created date.</inlineHelpText>
        <label>Inherit Attributes from Primary Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Notification_Chatter__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Enables the Chatter notification sent to the Opportunity Owner when Reference Lead Finder is enabled and their Opportunity meets the Reference Lead criteria.</inlineHelpText>
        <label>RLF Initial Notification Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Notification_Email__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Enables the email sent to the Opportunity Owner when Reference Lead Finder is enabled and their Opportunity meets the Reference Lead criteria.</inlineHelpText>
        <label>RLF Initial Notification Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Notification_Slack__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables the slack message sent to the Opportunity Owner when Reference Lead Finder is enabled and their Opportunity meets the Reference Lead criteria.</description>
        <inlineHelpText>Enables the slack message sent to the Opportunity Owner when Reference Lead Finder is enabled and their Opportunity meets the Reference Lead criteria.</inlineHelpText>
        <label>RLF Initial Notification Slack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Notification_member_Chatter__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Enables the Chatter notification sent to the Opportunity Owner when Reference Lead Finder is enabled, their Opportunity meets the Reference Lead Finder criteria, and the Account is already a Reference Program Member.</inlineHelpText>
        <label>RLF Initial - New Contact Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Notification_member_Email__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Enables the email sent to the Opportunity Owner when Reference Lead Finder is enabled, their Opportunity meets the Reference Lead Finder criteria, and the Account is already a Reference Program Member.</inlineHelpText>
        <label>RLF Initial - New Contact Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Notification_member_Slack__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables the slack message sent to the Opportunity Owner when Reference Lead Finder is enabled, their Opportunity meets the Reference Lead Finder criteria, and the Account is already a Reference Program Member.</description>
        <inlineHelpText>Enables the slack message sent to the Opportunity Owner when Reference Lead Finder is enabled, their Opportunity meets the Reference Lead Finder criteria, and the Account is already a Reference Program Member.</inlineHelpText>
        <label>RLF Initial - New Contact Slack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Influitive_Integration_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Influitive Integration Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Large_Opportunity_Chatter__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Enables the Chatter notification sent to the public group configured for the CRP Team for any requests where the Opportunity amount meets or exceeds the Managed Request Opportunity Threshold.</inlineHelpText>
        <label>Large Oppty Reference Request Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Large_Opportunity_Email__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Enables the email sent to the public group configured for the CRP Team for any requests where the Opportunity amount meets or exceeds the Managed Request Opportunity Threshold.</inlineHelpText>
        <label>Large Oppty Reference Request Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Large_Opportunity_Slack__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables the slack message sent to the public group configured for the CRP Team for any requests where the Opportunity amount meets or exceeds the Managed Request Opportunity Threshold.</description>
        <inlineHelpText>Enables the slack message sent to the public group configured for the CRP Team for any requests where the Opportunity amount meets or exceeds the Managed Request Opportunity Threshold.</inlineHelpText>
        <label>Large Oppty Reference Request Slack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Notification_Date__c</fullName>
        <description>Indicates when the last point summary notifications were sent to users.</description>
        <inlineHelpText>Indicates when the last point summary notifications were sent to users.</inlineHelpText>
        <label>Last Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Refresh_Date__c</fullName>
        <description>Indicates when the last round of Profile Update requests were sent out.</description>
        <inlineHelpText>Indicates when the last round of Profile Update requests were sent out.</inlineHelpText>
        <label>Last Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Launch_Frequency__c</fullName>
        <description>Determines the frequency with which requests for Profile Updates are sent using the Automatic Launch.</description>
        <inlineHelpText>Determines the frequency with which requests for Profile Updates are sent using the Automatic Launch.</inlineHelpText>
        <label>Launch Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi-Annually</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Limit_Contact_Redeem__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Limit Contact Redeem to Contact Points</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manage_ContentVersion_Custom_Fields__c</fullName>
        <label>Manage Content Version Custom Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Manage_ContentVersion_Custom_Fields_f__c</fullName>
        <formula>HYPERLINK(&apos;/apex/&apos;+ $Setup.POR_App_Configuration__c.Namespace__c +&apos;ManageContentVersionFields?customSettingId=&apos;+Id, &apos;Manage&apos;, &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manage Content Version Custom Fields</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manage_Data_Collector__c</fullName>
        <formula>HYPERLINK(&apos;/apex/&apos;+ $Setup.POR_App_Configuration__c.Namespace__c +&apos;DataCollectorManagePage?customSettingId=&apos;+ Id , &apos;Manage&apos;, &apos;_self&apos;)</formula>
        <label>Manage Data Collector</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manage_Interview_Questions__c</fullName>
        <formula>HYPERLINK(&apos;/apex/&apos;+ $Setup.POR_App_Configuration__c.Namespace__c +&apos;QuestionSettingMatrix?customSettingId=&apos;+Id, &apos;Manage&apos;, &apos;_self&apos;)</formula>
        <label>Manage Interview Questions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manage_Reference_Lead__c</fullName>
        <formula>HYPERLINK(&apos;/apex/&apos;+ $Setup.POR_App_Configuration__c.Namespace__c +&apos;referenceLeadMappingPage?customSettingId=&apos;+ Id , &apos;Manage&apos;, &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Configure Reference Profile Form</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Managed_Reference_Content__c</fullName>
        <formula>HYPERLINK(&apos;/apex/&apos;+ $Setup.POR_App_Configuration__c.Namespace__c +&apos;ReferenceContentTypeSettingMatrix?customSettingId=&apos;+Id+&apos;&amp;isContentSetting=true&apos;, &apos;Manage&apos;, &apos;_self&apos;)</formula>
        <label>Manage Reference Content</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Managed_Request_Opportunity_Threshold__c</fullName>
        <description>Any Request related to an Opportunity that is equal to or greater than the amount specified here will automatically be marked as a Managed request and sent to the CRP Team</description>
        <inlineHelpText>Any Request related to an Opportunity with a value that is equal to or greater than the amount specified here will automatically be converted to a Managed Request.</inlineHelpText>
        <label>Managed Request Opportunity Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Managed_to_P2P_Min__c</fullName>
        <label>Managed to P2P Min</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Managed_to_P2P_Owner_Chatter__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Enables the Chatter notification sent to the Reference Owner when a Request for their Account is switched from a Managed Request to a P2P Request.</inlineHelpText>
        <label>Managed2P2P Change-Owner Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Managed_to_P2P_Owner_Email__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Enables the email sent to the Reference Owner when a Request for their Account is switched from a Managed Request to a P2P Request.</inlineHelpText>
        <label>Managed2P2P Change-Owner Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Managed_to_P2P_Owner_Slack__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables the slack message sent to the Reference Owner when a Request for their Account is switched from a Managed Request to a P2P Request.</description>
        <inlineHelpText>Enables the slack message sent to the Reference Owner when a Request for their Account is switched from a Managed Request to a P2P Request.</inlineHelpText>
        <label>Managed2P2P Change-Owner Slack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Managed_to_P2P_Requester_Chatter__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Enables the Chatter notification sent to the Requester when their Request is switched from Managed to P2P.</inlineHelpText>
        <label>Managed2P2P Change-Requester Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Managed_to_P2P_Requester_Email__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Enables the email sent to the Requester when their Request is switched from Managed to P2P.</inlineHelpText>
        <label>Managed2P2P Change-Requester Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Managed_to_P2P_Requester_Slack__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables the slack message sent to the Requester when their Request is switched from Managed to P2P.</description>
        <inlineHelpText>Enables the slack message sent to the Requester when their Request is switched from Managed to P2P.</inlineHelpText>
        <label>Managed2P2P Change-Requester Slack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manual_Automatic_Launch__c</fullName>
        <description>Manual Launch lets you decide the exact date to request the Profile Updates; with Automatic Launch Profile Updates are sent based on the Launch Frequency.</description>
        <inlineHelpText>Manual Launch lets you decide the exact date to request the Profile Updates; with Automatic Launch Profile Updates are sent based on the Launch Frequency.</inlineHelpText>
        <label>Manual/Automatic Launch</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Automatic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maximum_Expiration_Days__c</fullName>
        <inlineHelpText>The maximum number of days that a Microsite invitation can be active. Users cannot set a date beyond this limit.</inlineHelpText>
        <label>Maximum Expiration Days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Microsite_Visit_Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enables the Chatter notification sent to the sender with the daily summary of clicks by recipient(s).</inlineHelpText>
        <label>Microsite Visit Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Microsite_Visit_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enables the email sent to the sender with the daily summary of clicks by recipient(s).</inlineHelpText>
        <label>Microsite Visit Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Microsite_Visit_Slack__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables the slack message sent to the sender with the daily summary of clicks by recipient(s).</description>
        <inlineHelpText>Enables the slack message sent to the sender with the daily summary of clicks by recipient(s).</inlineHelpText>
        <label>Microsite Visit Slack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Minimum_Deadline__c</fullName>
        <description>Minimum deadline for requests</description>
        <inlineHelpText>The minimum lead time required to fulfill any type of reference Account request. No managed request type may have a lower value.</inlineHelpText>
        <label>Minimum Lead Time</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Opportunity_Size_DC__c</fullName>
        <inlineHelpText>The minimum Opportunity amount required to trigger a Data Collector notification.</inlineHelpText>
        <label>Minimum Opportunity Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Opportunity_Size_OP__c</fullName>
        <label>Minimum Opportunity Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Opportunity_Size__c</fullName>
        <label>Minimum Opportunity Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Sales_Stage__c</fullName>
        <description>Sales requests can only be made for Opportunities that are AT or PAST this sales stage.</description>
        <inlineHelpText>Sales requests can only be made for Opportunities that are AT or PAST this sales stage.</inlineHelpText>
        <label>Minimum Sales Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prospecting</fullName>
                </value>
                <value>
                    <fullName>Qualification</fullName>
                </value>
                <value>
                    <fullName>Needs Analysis</fullName>
                </value>
                <value>
                    <fullName>Value Proposition</fullName>
                </value>
                <value>
                    <fullName>Id. Decision Makers</fullName>
                </value>
                <value>
                    <fullName>Perception Analysis</fullName>
                </value>
                <value>
                    <fullName>Proposal/Price Quote</fullName>
                </value>
                <value>
                    <fullName>Negotiation/Review</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mixed_manage_request_settings__c</fullName>
        <description>Determine what attributes and custom fields will appear on each request type form for managed requests.</description>
        <formula>HYPERLINK(&apos;/apex/&apos;+ $Setup.POR_App_Configuration__c.Namespace__c +&apos;RequestSettingMatrix?customSettingId=&apos;+Id+&apos;&amp;isContentSetting=false&apos;, &apos;Manage&apos;, &apos;_self&apos;)</formula>
        <inlineHelpText>Determine what attributes and custom fields will appear on each request type form for managed requests.</inlineHelpText>
        <label>Managed Request Settings</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Notification_Date__c</fullName>
        <description>Indicates when the next point summary notifications will be sent to users.</description>
        <inlineHelpText>Indicates when the next point summary notifications will be sent to users.</inlineHelpText>
        <label>Next Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Refresh_launch_Date__c</fullName>
        <description>Indicates when the next requests for Profiles Updates will be sent automatically.</description>
        <inlineHelpText>Indicates when the next requests for Profiles Updates will be sent automatically.</inlineHelpText>
        <label>Next Update Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_Response__c</fullName>
        <description>Days before deadline of no response</description>
        <inlineHelpText>The number of days before a Request deadline that a notification will be sent to the requester explaining that the Account/Reference Owner has been unresponsive.</inlineHelpText>
        <label>No Response</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Response_days__c</fullName>
        <description>Indicates the number of days after the &quot;Are they referenceable yet?&quot; notification is sent that the Reference Lead Status will be set to No Response. If no value is entered then the No Reponse date is left blank on the record.</description>
        <inlineHelpText>Indicates the number of days after the &quot;Are they referenceable yet?&quot; notification is sent that the Reference Lead Status will be set to No Response. If no value is entered then the No Reponse date is left blank on the record.</inlineHelpText>
        <label>No Response Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nomination_Accepted_Chatter__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Enables the Chatter notification sent to the Nominator when the Account / Contact they nominated is accepted as a Reference Program Member.</inlineHelpText>
        <label>Nomination Accepted Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nomination_Accepted_Email__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Enables the email sent to the Nominator when the Account / Contact they nominated is accepted as a Reference Program Member.</inlineHelpText>
        <label>Nomination Accepted Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nomination_Accepted_Slack__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables the slack message sent to the Nominator when the Account / Contact they nominated is accepted as a Reference Program Member.</description>
        <inlineHelpText>Enables the slack message sent to the Nominator when the Account / Contact they nominated is accepted as a Reference Program Member.</inlineHelpText>
        <label>Nomination Accepted Slack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nomination_Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable the Chatter sent to the Customer Reference Team public group following submission of a Nomination from either an Account or Contact record.</inlineHelpText>
        <label>Nomination Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nomination_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enables the email sent to the Customer Reference Team public group following submission of a Nomination from either an Account or Contact record.</inlineHelpText>
        <label>Nomination Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nomination_Rejected_Chatter__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Enables the Chatter notification sent to the Nominator when the Account / Contact they nominated is not accepted as a Reference Program Member.</inlineHelpText>
        <label>Nomination Rejected Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nomination_Rejected_Email__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Enables the email sent to the Nominator when the Account / Contact they nominated is not accepted as a Reference Program Member.</inlineHelpText>
        <label>Nomination Rejected Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nomination_Rejected_Slack__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables the slack message sent to the Nominator when the Account / Contact they nominated is not accepted as a Reference Program Member.</description>
        <inlineHelpText>Enables the slack message sent to the Nominator when the Account / Contact they nominated is not accepted as a Reference Program Member.</inlineHelpText>
        <label>Nomination Rejected Slack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nomination_Settings__c</fullName>
        <formula>HYPERLINK(&apos;/apex/&apos;+ $Setup.POR_App_Configuration__c.Namespace__c +&apos;NominationSettings?customSettingId=&apos;+ Id , &apos;Manage&apos;, &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Customize the Nomination form including section labels, custom fields and reference activities to be included.</inlineHelpText>
        <label>Nomination Settings</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nomination_Slack__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables the slack message sent to the Customer Reference Team public group following submission of a Nomination from either an Account or Contact record.</description>
        <inlineHelpText>Enables the slack message sent to the Customer Reference Team public group following submission of a Nomination from either an Account or Contact record.</inlineHelpText>
        <label>Nomination Slack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nomination_disposition_window__c</fullName>
        <defaultValue>1</defaultValue>
        <description>This is your goal, in days, for a final disposition on a Nomination.</description>
        <inlineHelpText>This is your goal, in days, for a final disposition on a Nomination.</inlineHelpText>
        <label>Nomination Disposition Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notification_Settings__c</fullName>
        <formula>HYPERLINK(&apos;/apex/&apos;+ $Setup.POR_App_Configuration__c.Namespace__c +&apos;EmailChatterSettings?customSettingId=&apos;+ Id , &apos;Manage&apos;, &apos;_self&apos;)</formula>
        <label>Notification Settings</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Reminders_To_Be_Sent__c</fullName>
        <defaultValue>2</defaultValue>
        <inlineHelpText>The number of reminder notifications that should be sent after the initial notification.</inlineHelpText>
        <label>Number Of Reminders To Be Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_request_accounts__c</fullName>
        <description>The maximum number of reference accounts that can be requested in a single request.</description>
        <inlineHelpText>The maximum number of reference accounts that can be requested in a single request.</inlineHelpText>
        <label>Max Accounts per Request</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Closed_Stages__c</fullName>
        <inlineHelpText>The Data Collector notification will be sent to the Opportunity Owner at this Stage (if the Opportunity meets the Minimum Opportunity Size value).</inlineHelpText>
        <label>Opportunity Closed Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prospecting</fullName>
                </value>
                <value>
                    <fullName>Qualification</fullName>
                </value>
                <value>
                    <fullName>Needs Analysis</fullName>
                </value>
                <value>
                    <fullName>Value Proposition</fullName>
                </value>
                <value>
                    <fullName>Id. Decision Makers</fullName>
                </value>
                <value>
                    <fullName>Perception Analysis</fullName>
                </value>
                <value>
                    <fullName>Proposal/Price Quote</fullName>
                </value>
                <value>
                    <fullName>Negotiation/Review</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Closed_Won_Stage__c</fullName>
        <label>Opportunity Closed Won Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prospecting</fullName>
                </value>
                <value>
                    <fullName>Qualification</fullName>
                </value>
                <value>
                    <fullName>Needs Analysis</fullName>
                </value>
                <value>
                    <fullName>Value Proposition</fullName>
                </value>
                <value>
                    <fullName>Id. Decision Makers</fullName>
                </value>
                <value>
                    <fullName>Perception Analysis</fullName>
                </value>
                <value>
                    <fullName>Proposal/Price Quote</fullName>
                </value>
                <value>
                    <fullName>Negotiation/Review</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Product_Field_API_Name__c</fullName>
        <label>Opportunity Product Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_FiscalYearStartMonth__c</fullName>
        <label>Organization FiscalYearStartMonth</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P2P_Approve_Without_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows for approval of a Peer 2 Peer request without selecting a Contact. “Select Inactive Contacts” must also be enabled to enable this functionality.</description>
        <inlineHelpText>Allows for approval of a Peer 2 Peer request without selecting a Contact. “Select Inactive Contacts” must also be enabled to enable this functionality.</inlineHelpText>
        <label>Approve Without Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P2P_Select_Inactive_Contacts__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Allows the selection of Contacts who are not Reference Program Members for Reference Programs that do not manage referenceable Contacts. Note that no Contact Request record will be created if the Contact is not a Reference Program Member.</inlineHelpText>
        <label>Select Inactive Contacts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P2P_to_Managed_Chatter__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Enables the Chatter notification sent to the Requester when the CRP team takes ownership of their Request and it is switched from P2P to Managed.</inlineHelpText>
        <label>P2P2Managed Change-Requester Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P2P_to_Managed_Email__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Enables the email sent to the Requester when the CRP team takes ownership of their Request and it is switched from P2P to Managed.</inlineHelpText>
        <label>P2P2Managed Change-Requester Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P2P_to_Managed_Slack__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables the slack message sent to the Requester when the CRP team takes ownership of their Request and it is switched from P2P to Managed.</description>
        <inlineHelpText>Enables the slaack message sent to the Requester when the CRP team takes ownership of their Request and it is switched from P2P to Managed.</inlineHelpText>
        <label>P2P2Managed Change-Requester Slack</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>